force-app/main/default/objects/Resource__c/fields/Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Article_Id__c</fullName>
    <label>Article ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>