force-app/main/default/objects/Resource__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BP</fullName>
                <label>Baseplate</label>
            </value>
            <value>
                <fullName>LN</fullName>
                <label>Lantern</label>
            </value>
            <value>
                <fullName>HS-SM</fullName>
                <default>true</default>
                <label>Housing up to 9095</label>
            </value>
            <value>
                <fullName>HS-LG</fullName>
                <label>Housing 9095+</label>
            </value>
            <value>
                <fullName>-W</fullName>
                <label>Welding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>