force-app/main/default/objects/Resource__c/fields/Z_Rel_Date__c.field-meta.xml
<CustomField>
    <fullName>Z_Rel_Date__c</fullName>
    <label>Z-Rel Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>